# dali-sniffer

./: .gitignore  AGENTS.md  README.md  sdkconfig.defaults
docs/: raw_commands.md
main/: CMakeLists.txt  Kconfig.projbuild  blink_example_main.c  blink_example_main.cpp  dali_protocol.cpp  dali_protocol.h  dali_sniffer.cpp  dali_sniffer.h  main.cpp  mqtt_bridge.cpp  mqtt_bridge.h  web_server.c  web_server.cpp  web_server.h  wifi_state.c  wifi_state.h
main/web/: app.js  index.html  styles.css
main/web_dist/: index.html
main/web_dist/assets/: app.css  app.js
webui/: index.html  package.json  vite.config.js
webui/src/: commands.js  config.js  main.js  styles.css  ui.js  ws.js
